fixed flickering on hover effect

--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,26 @@
 body{
-  background-image: url("back.jpg");
-  background-repeat: no-repeat;
-  background-size: 100vw 100vh;
   height: 100vh;
   overflow: hidden;
   font-family: Arial, Helvetica, sans-serif;
+  background-image: url("back.jpg");
+  background-size: 100vw 100vh;
+	background-position: 0px 0px;
+	background-repeat: repeat-x;
+  animation: move 80s linear infinite;
+}
+@keyframes move {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: -100vw 0;
+  }
+}
+#mainTable{
+  margin-top: 4vh;
 }
 .card {
+  z-index: 100;
   background-color: rgba(213, 233, 199, 0.8);
   border: 3px solid rgba(112, 102, 102, 0.8);
   height: 10vh;
@@ -17,6 +31,7 @@ body{
   text-align: center;
   border-radius: 1em;
   opacity: 0.9;
+  box-shadow: 5px 10px 18px rgba(97, 197, 243, 0.733);
 }
 .height{
   height: 10vh;
@@ -27,7 +42,19 @@ body{
   opacity: 0;
   bottom: 100px;
 }
-.card:hover{
+/* .card:hover{
+  height: 2vh;
+  border-radius: 50%;
+  border: 3px solid rgba(66, 73, 4, 0.8);
+  top: -20px;
+  background-color: yellow;
+  transition: 0.3s;
+} */
+
+/* #letter1:hover > div#top-div2 {
+} */
+
+.n:hover > .card{
   height: 2vh;
   border-radius: 50%;
   border: 3px solid rgba(66, 73, 4, 0.8);
@@ -35,6 +62,7 @@ body{
   background-color: yellow;
   transition: 0.3s;
 }
+
 .open{
   height: 2vh;
   border-radius: 50%;
@@ -42,14 +70,6 @@ body{
   top: -20px;
   background-color: yellow;
 }
-/* .card:hover img
-{
-  opacity: 1;
-  position: relative;
-  height: 100px;
-  bottom: 15vh;
-  transition: 0.5s;
-} */
 .reveal{
   opacity: 1;
   position: relative;
@@ -57,7 +77,7 @@ body{
   bottom: 15vh;
   transition: 0.5s;
 }
-#newGame{
+#newGame, #gameSolver, #mute{
   height: 12vh;
   width: 12vh;
   border-radius: 50%;
@@ -69,7 +89,12 @@ body{
   border-color: aqua;
   border-width: 2vh;
 }
+#mute{
+  font-size: 4vh;
+  border-color: red;
+}
 #tbl2{
+  z-index: 1;
   text-align: center;
 }
 #p1points, #p2points, #time, #moves{
@@ -78,9 +103,8 @@ body{
   text-align: center;
   font-weight: bold;
   opacity: 0.8;
+  height: 4vh;
 }
-
-
 #aliens {
   width: 100px;
   height: 100px;
@@ -89,7 +113,6 @@ body{
   animation-duration: 12s;
   animation-iteration-count: infinite;
 }
-
 @keyframes example {
   0%   {left:-100px; top:-100px;}
   25%  {left:200px; top:0px;}
@@ -97,10 +120,25 @@ body{
   75%  {left:-1200px; top:200px;}
   100% {left:-100px; top:-100px;}
 }
+#AB{
+  z-index: -1;
+  transform-origin: 70% 400%;
+  height: 62px;
+  width: 10vw;
+  font-size: 52vh; 
+  color: yellow; 
+  font-weight: bold;
+  filter: blur(3px);
+  position: relative;
+  opacity: 0.9;
+  top: 10vh;
+  right: 50vw;
+  animation: AB-spin infinite 30s linear;
+}
 .AB{
   animation: AB-spin infinite 10s linear;
 }
-#AB, .BA{
+.BA{
   animation: BA-spin infinite 20s linear;
 }
 .AA{
@@ -141,3 +179,10 @@ body{
     transform: rotate(90deg);
   }
 }
+h1{
+  font-size: large;
+}
+/* #mute{
+  font-size: 3vh;
+}
+ */
